# tmpgl

./: .atom-dbg.cson  .atom-gdb.json  .build-tools.cson  .clocignore  .gdb_history  .gdbinit  .gitignore  .skip_stl  .tags  .tags1  CMakeLists.txt  Doxyfile  README.md  assets.cpp  assets.h  boilerplate.cpp  boilerplate.h  clean  clean_cmake  cloc  coord_2d.h  do_build  eng_texture.cpp  eng_texture.h  game_map.cpp  game_map.h  game_sprite.cpp  game_sprite.h  gmon.out  helpers.cpp  helpers.h  imgui.ini  main.cpp  map.json  png_texture.cpp  run  shader.cpp  shader.h  tileset.cpp  tileset.json  (+1 more)
assets/: tileset.json
assets/shaders/: all_white.glsl  basic.glsl  basic.vertex  basic_wire.glsl  frag.glsl
cmake/: FindLibunwind.cmake
sample_project/: dirs.json
sample_project/shaders/: all_white.glsl  frag.glsl
sample_project/sprites/: sprite.json
sample_project/tiles/: tileset.json
shaders/: basic.glsl  frag.glsl
src/: CMakeLists.txt  Doxyfile  aliases.h  aliases.hpp  assets.cpp  assets.h  boilerplate.cpp  boilerplate.h  cfg.cpp  cfg.h  data_transform.cpp  data_transform.h  debug.cpp  debug.h  eng_sprite.cpp  eng_sprite.h  eng_texture.cpp  eng_texture.h  engine.cpp  engine.h  fonts.cpp  fonts.h  game_map.cpp  game_map.h  game_sprite.cpp  game_sprite.h  game_tileset.cpp  game_tileset.h  generators.cpp  generators.h  helpers.cpp  helpers.h  loader.cpp  loader.h  logging.cpp  logging.h  main.cpp  png_texture.cpp  shader.cpp  shader.h  (+13 more)
src/editor/: SpriteEditor.cpp
src/engine/: engine.cpp  engine.h  shader.cpp  shader.h  texture_atlas.h  texture_manager.cpp  texture_manager.h  vbo.cpp  vbo.h
src/engine/atlas/: atlas_builder.cpp  atlas_builder.h  atlas_piece.h  texture_atlas.cpp  texture_atlas.h
src/engine/datatypes/: game_map.cpp  game_map.h  game_sprite.cpp  game_sprite.h  game_tileset.cpp  game_tileset.h
src/engine/rt/: eng_object.h  eng_sprite.cpp  eng_sprite.h  eng_texture.cpp  eng_texture.h  eng_types.h
src/engine/text/: fonts.cpp  fonts.h  text_engine.h
src/helpers/: OrderedMap.h  generators.cpp  generators.h  helpers.cpp  string_helper  util.cpp  util.h
src/include/: alphanum.hpp  boost_enum.hpp  gl3w.c  prettyprint.hpp
src/include/imgui/: imgui_impl_opengl3.cpp
src/loader/: assets.cpp  assets.h  loader.cpp  loader.h
